--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,16 +2,15 @@ version: "3.5"
 
 services:
   geoserver:
-    image: kartoza/geoserver
-    environment:
-      - GEOSERVER_ADMIN_PASSWORD=${GEOSERVER_ADMIN_PASSWORD}
-      - GEOSERVER_ADMIN_USER=${GEOSERVER_ADMIN_USER}
+    image: oscarfonts/geoserver:latest
+    env_file:
+      - .env
     networks:
       - harvest
     ports:
-      - 8600:8080
+      - 8080:8080
     volumes:
-      - ./geoserver/data:/opt/geoserver/data_dir
+      - ./geoserver/data:/var/local/geoserver
     restart: unless-stopped
 
   datawolf:
@@ -28,7 +27,7 @@ services:
       - DATAWOLF_ADMINS=${DATAWOLF_ADMINS:-admin@example.com}
       - DATAWOLF_USE_AUTH=${DATAWOLF_USE_AUTH:-false}
       - DB_CLASS_NAME=${DB_CLASS_NAME:-org.postgresql.ds.PGSimpleDataSource}
-      - DB_DIALECT=${DB_DIALECT:-}
+      - DB_DIALECT=${DB_DIALECT:-org.hibernate.dialect.PostgreSQL9Dialect}
       - DB_SOURCE_URL=${DB_SOURCE_URL:-jdbc:postgresql://postgres/datawolf}
       - DB_MAX_POOLSIZE=${DB_MAX_POOLSIZE:-100}
       - DB_IDLE_TIMEOUT=${DB_IDLE_TIMEOUT:-30000}
