--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,7 +58,7 @@ services:
       - ENGINE_EXTRALOCALEXECUTOR=${ENGINE_EXTRALOCALEXECUTOR:-1}
       - ENGINE_LOCALEXECUTORTHREADS=${ENGINE_LOCALEXECUTORTHREADS:-8}
       - ENGINE_PAGESIZE=${ENGINE_PAGESIZE:-250}
-      - LOG=${LOG}
+      - LOG=${DATAWOLF_LOG:---out}
     ports:
       - 8888:8888
     networks:
